--- a/prod_v30/product/product.html
+++ b/prod_v30/product/product.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Product Information Template: Regulatory Enrolment Process - Canada.ca">
     <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-08-27">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-09-17">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
@@ -46,75 +46,29 @@
         document.write(wet.builder.refTop({
             cdnEnv: "prod" //jqueryEnv:false
         }));
-        function addLeavingChk(){
-            window.addEventListener('beforeunload', function(event){
-                return 'The form has been updated, do you want to stay on the page?';
-            });
-            window.onbeforeunload = function(){
-                return 'The form has been updated, do you want to stay on the page?';
-            }
-            $('.modal-body').after('<div class="modal-footer"><button type="button" id="ftrClose" class="btn btn-sm btn-primary pull-left overlay-close" style="" title="Close (escape key)">Close<span class="wb-inv">(escape key)</span></button></div>');
-        }
-        function focusOnRow(e, alter) {
+        function focusOnRow(e) {
             var myTable = $(e).closest('table');
-            window.setTimeout(function(){
-                $('html, body').animate({
-                    scrollTop: $(myTable).offset().top + 'px'
-                }, 'fast');
-                var myTr = $(myTable).find('tr').last();
-                if(! $(myTr).attr('id')){
-                    myTr = $(myTr).prev();
-                }
-                var td = $(myTr).find(' > td ').first();
-                if($(td).length < 1){
-                    if(alter != ''){
-                        var parent = $(myTable);
-                        var button = $(parent).find('button[id^=' + alter + ']');
-                        while ($(button).length < 1){
-                            parent = $(parent).parent();
-                            button = $(parent).find('button[id^=' + alter + ']');
-                        }
-                        $(button).focus();
-                    } else {
-                        $(myTable).focus();
-                    }
-                } else {
-                    $(td).focus();
-                }
-            }, 100);
+            var firstTr = $(myTable).find('tr');
+            if (firstTr.length > 0) {
+                $(firstTr[0]).focus();
+            } else {
+                $(myTable).focus();
+            }
         }
         function focusOnTable(node, idStartWith){
             var myTable = null;
             if(node != null){
-                myTable = $(node).closest('tr').find('table[id^=' + idStartWith + ']')[0];
+                myTable = $(node).find('table[id^=' + e + ']')[0];
             }
             if(myTable != null){
-                $('html, body').animate({
-                    scrollTop: $(myTable).offset().top + 'px'
-                }, 'fast');
-                window.setTimeout(function() {
-                    var myTr = $(myTable).find('> tbody > tr').last();
-                    var myTrId = $(myTr).attr('id');
-                    if(! myTrId || myTrId == ''){
-                        myTr = $(myTr).prev();
-                    }
-                    var myTd = $(myTr).find(' > td ').first();
-                    $(myTd).focus();
-                }, 100);
+                alert($(myTable).attr('id'));
+                $(myTable).focus();
             }
-        }
-        function focusOnProvince(e){
-                var node = $(e).parent().parent().parent().next();
-            window.setTimeout(function() {
-                var id = $(node).find('[id^="province_"],[id^="state_"],[id^="proveState_"]').attr('id');
-                $('#' + id).focus();
-            }, 200);
         }
     </script>
 </head>
 
-<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;" onload="addLeavingChk();">
-
+<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;">
 <div id="def-top">
     <!-- Write closure fall-back static file -->
     <!-- ./wet_4_0_27/cdts/static/top-en.html-->
@@ -186,7 +140,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-08-27"
+            dateModified: "2019-09-17"
         });
     </script>
 </main>
@@ -226,7 +180,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-en_20190827_1127.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-en_20190917_1409.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
