--- a/prod_v30/product/produit.html
+++ b/prod_v30/product/produit.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-08-27">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-09-17">
     <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -46,74 +46,10 @@
         document.write(wet.builder.refTop({
             cdnEnv: "prod" //jqueryEnv:false
         }));
-        function addLeavingChk(){
-            window.addEventListener('beforeunload', function(event){
-                return 'fr_The form has been updated, do you want to stay on the page?';
-            });
-            window.onbeforeunload = function(){
-                return 'fr_The form has been updated, do you want to stay on the page?';
-            }
-            $('.modal-body').after('<div class="modal-footer"><button type="button" id="ftrClose" class="btn btn-sm btn-primary pull-left overlay-close" style="" title="Fermer (touche d&#39;échappement)">Fermer<span class="wb-inv">(touche d&#39;échappement)</span></button></div>');
-        }
-        function focusOnRow(e, alter) {
-            var myTable = $(e).closest('table');
-            window.setTimeout(function(){
-                $('html, body').animate({
-                    scrollTop: $(myTable).offset().top + 'px'
-                }, 'fast');
-                var myTr = $(myTable).find('tr').last();
-                if(! $(myTr).attr('id')){
-                    myTr = $(myTr).prev();
-                }
-                var td = $(myTr).find(' > td ').first();
-                if($(td).length < 1){
-                    if(alter != ''){
-                        var parent = $(myTable);
-                        var button = $(parent).find('button[id^=' + alter + ']');
-                        while ($(button).length < 1){
-                            parent = $(parent).parent();
-                            button = $(parent).find('button[id^=' + alter + ']');
-                        }
-                        $(button).focus();
-                    } else {
-                        $(myTable).focus();
-                    }
-                } else {
-                    $(td).focus();
-                }
-            }, 100);
-        }
-        function focusOnTable(node, idStartWith){
-            var myTable = null;
-            if(node != null){
-                myTable = $(node).closest('tr').find('table[id^=' + idStartWith + ']')[0];
-            }
-            if(myTable != null){
-                $('html, body').animate({
-                    scrollTop: $(myTable).offset().top + 'px'
-                }, 'fast');
-                window.setTimeout(function() {
-                    var myTr = $(myTable).find('> tbody > tr').last();
-                    var myTrId = $(myTr).attr('id');
-                    if(! myTrId || myTrId == ''){
-                        myTr = $(myTr).prev();
-                    }
-                    var myTd = $(myTr).find(' > td ').first();
-                    $(myTd).focus();
-                }, 100);
-            }
-        }
-        function focusOnProvince(e){
-            var node = $(e).parent().parent().parent().next();
-            window.setTimeout(function() {
-                var id = $(node).find('[id^="province_"],[id^="state_"],[id^="proveState_"]').attr('id');
-                $('#' + id).focus();
-            }, 200);
-        }
     </script>
 </head>
 
-<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;" onload="addLeavingChk();">
+<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;">
 <div id="def-top">
     <!-- Write closure fall-back static file -->
     <!-- ./wet_4_0_27/cdts/static/top-fr.html-->
@@ -185,7 +121,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-08-27"
+            dateModified: "2019-09-17"
         });
     </script>
 </main>
@@ -225,7 +161,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20190827_1127.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-fr_20190917_1409.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
