--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
                         <a href="./stylesheet/pharmabio_stylesheets_3_0_fr.zip">Download V3.0 stylesheet zip file (French version, Sept 12, 2019) </a>
                     </div>
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0 and V3.0 stylesheet zip file (English version, Sept 12, 2019) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_4_0_en.zip">Download V4.0 stylesheet zip file (English version, Sept 18, 2019) </a>
+                    </div>
+                    <div class="row">
+                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0 and V4.0 stylesheet zip file (English version, Sept 18, 2019) </a>
                     </div>
                 </div>
 
@@ -239,7 +242,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Sept 11, 2019</dt>
+                    <dt>Date modified: Sept 18, 2019</dt>
                 </dl>
             </div>
         </div>
