--- a/prod_v3/company/entreprise.html
+++ b/prod_v3/company/entreprise.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle de l'entreprise: Processus d'Inscription Réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-12-18">
+    <meta property="dcterms.modified" title="W3CDTF" content="2020-02-10">
     <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -107,7 +107,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Modèle de l'entreprise: Processus d'Inscription Réglementaire</h1>
+            <h1 property="name" id="wb-cont">Modèle de l'entreprise: Processus d'Inscription Réglementaire (Version 3.1.0)</h1>
             <p class="pagetag">
                 <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
@@ -149,7 +149,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-12-18"
+            dateModified: "2020-02-10"
         });
     </script>
 </main>
@@ -189,7 +189,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppEXT-fr_20191218_1137.min.js"></script>
+<script src="app/scripts/companyAppEXT-fr_20200210_1014.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
