--- a/prod_v3/product/produit.html
+++ b/prod_v3/product/produit.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-12-17">
+    <meta property="dcterms.modified" title="W3CDTF" content="2020-02-17">
     <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -107,7 +107,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Modèle d'information sur le produit: Processus d'inscription réglementaire</h1>
+            <h1 property="name" id="wb-cont">Modèle d'information sur le produit: Processus d'inscription réglementaire (Version 3.1.0)</h1>
             <p class="pagetag">
                 <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
@@ -150,7 +150,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-12-17"
+            dateModified: "2020-02-17"
         });
     </script>
 </main>
@@ -190,7 +190,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20191217_1543.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-fr_20200217_1016.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
