--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
                 <h2>New CSP Form (Start to use on January 2019) - Non-brexit Version B </h2>
             </div>
             <div class="row">
-                <a href="./certificate/certificate-supplementary-protection-form-2019-2020.html">CSP Form English-External (Apr 18, 2019)</a>
+                <a href="./certificate/certificate-supplementary-protection-form-2019-2020.html">CSP Form English-External (Feb 17, 2020)</a>
             </div>
             <div class="row">
-                <a href="./certificate/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Apr 18, 2019)</a>
+                <a href="./certificate/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Feb 17, 2020)</a>
             </div>
             <div class="row">
-                <a href="./certificate/formulaire-certificat-protection-supplementaire-2019-2020.html">CSP Form French-External (Apr 18, 2019)</a>
+                <a href="./certificate/formulaire-certificat-protection-supplementaire-2019-2020.html">CSP Form French-External (Feb 17, 2020)</a>
             </div>
             <div class="row">
-                <a href="./certificate/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Apr 18, 2019)</a>
+                <a href="./certificate/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Feb 17, 2020)</a>
             </div>
         </div>
 
@@ -202,44 +202,44 @@
             </div>
         </div>
 
-        <div>
-            <div class="row">
-                <h2> External User Links</h2>
-            </div>
-            <div class="row">
-                <a href="./company/companyEXT-en.html">Company Enrolment -External (Dec 1, 2017)</a>
-            </div>
-            <div class="row">
-                <a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Aug 08, 2018)</a>
-            </div>
-            <div class="row">
-                <a href="./activity/activityEXT-en.html">Activity Enrolment -External (June 18, 2018)</a>
-            </div>
-            <div class="row">
-                <a href="./dossier/dossierEXT-en.html">Dossier Enrolment External (Dec 6, 2017)</a>
-            </div>
-        </div>
-        <div>
-            <div class="row">
-                <h2>Internal User (i.e. HPFB) Links</h2>
-            </div>
-            <div class="row">
-                <a href="./company/companyINT-en.html">Company Enrolment -Internal (Nov 3, 2017)</a>
-            </div>
+        <!--<div>-->
+            <!--<div class="row">-->
+                <!--<h2> External User Links</h2>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./company/companyEXT-en.html">Company Enrolment -External (Dec 1, 2017)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Aug 08, 2018)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./activity/activityEXT-en.html">Activity Enrolment -External (June 18, 2018)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./dossier/dossierEXT-en.html">Dossier Enrolment External (Dec 6, 2017)</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div>-->
+            <!--<div class="row">-->
+                <!--<h2>Internal User (i.e. HPFB) Links</h2>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./company/companyINT-en.html">Company Enrolment -Internal (Nov 3, 2017)</a>-->
+            <!--</div>-->
 
-            <div class="row">
-                <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (June 18, 2018)</a>
-            </div>
-            <div class="row">
-                <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Dec 6, 2017)</a>
-            </div>
-        </div>
+            <!--<div class="row">-->
+                <!--<a href="./activity/activityINT-en.html">Activity Enrolment -Internal (June 18, 2018)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Dec 6, 2017)</a>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
     <!--content ends here -->
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: Mar 20, 2019</dt>
+            <dt>Date modified: Feb 17, 2020</dt>
         </dl>
     </div>
     </div>
