--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 
                 <div>
                     <div class="row">
-                        <h2>Regulatory Enrolment Process: Pharma/Bio - IOTranscation V4.2</h2>
+                        <h2>Regulatory Enrolment Process: Pharma/Bio - IOTransition V4.2</h2>
                     </div>
                     <div class="row">
-                        <a href="./io_index.html">Pharma/Bio Forms - IOTranscation V4.2</a>
+                        <a href="./io_index.html">Pharma/Bio Forms - IOTransition V4.2</a>
                     </div>
                 </div>
 
