--- a/pilot_v42_index.html
+++ b/pilot_v42_index.html
@@ -193,7 +193,7 @@
                         <h2>Within the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./pilot_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (fees updated - effective 2021-04-01)</a>
+                        <a href="./pilot_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (fees updated - To be used for transactions filed after April 1, 2021)</a>
                         <ul>
                             <li>Required with each regulatory transaction filed to Health Canada.</li>
                             <li>Sent via the CESG within the regulatory transaction (submission).</li>
