--- a/prod_v42_index-fr.html
+++ b/prod_v42_index-fr.html
@@ -175,7 +175,7 @@
             <!--<a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./prod_v42/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (TR) (Frais révisés – effectif en date du 01/04/2021)</a>
+                <a href="./prod_v42/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (TR) (Frais révisés – À utiliser pour les transactions déposées après le 1er avril 2021)</a>
                 <ul>
                     <li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
                     <li> Envoyé via la PCDC dans le dossier 1.2.1 de la transaction réglementaire (soumission).</li>
