--- a/prod_v42_index.html
+++ b/prod_v42_index.html
@@ -173,7 +173,7 @@
                 <h2>Within the Regulatory Transaction Process</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (fees updated - To be used for transactions filed after April 1, 2021)</a>
+                <a href="./prod_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.3 updated on March 5, 2021)</a>
                 <ul>
                     <li> Required with each regulatory transaction filed to Health Canada.</li>
                     <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (submission).</li>
@@ -274,7 +274,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2021-02-25</dt>
+            <dt>Date modified: 2021-03-05</dt>
         </dl>
     </div>
 </main>
