--- a/io_index.html
+++ b/io_index.html
@@ -190,10 +190,16 @@
                     <a href="./stylesheet/pharmabio_stylesheets_4_1_en.zip">Download V4.1 stylesheet zip file (English version, Sep 29, 2020) </a>
                 </div>
                 <div class="row">
-                    <a href="./stylesheet/pharmabio_stylesheets_4_1_fr.zip">Download V4.1 stylesheet zip file (French version, Sep 04, 2020) </a>
+                <a href="./stylesheet/pharmabio_stylesheets_4_1_fr.zip">Download V4.1 stylesheet zip file (French version, Sep 04, 2020) </a>
                 </div>
                 <div class="row">
-                    <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0 and V4.1 stylesheet zip file (English version, Sep 29, 2020) </a>
+                    <a href="./stylesheet/pharmabio_stylesheets_4_2_en.zip">Download V4.2 stylesheet zip file (English version, Mar 26, 2021) </a>
+                </div>
+                <div class="row">
+                    <a href="./stylesheet/pharmabio_stylesheets_4_2_fr.zip">Download V4.2 stylesheet zip file (French version, Mar 26, 2021) </a>
+                </div>
+                <div class="row">
+                    <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0, V4.1 and V4.2 stylesheet zip file (English version, Mar 26, 2021) </a>
                 </div>
             </div>
 
@@ -228,7 +234,7 @@
 
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date modified: 2021-01-22</dt>
+                <dt>Date modified: 2021-03-26</dt>
             </dl>
         </div>
     </div>
