--- a/prod_v42_index-fr.html
+++ b/prod_v42_index-fr.html
@@ -244,7 +244,7 @@
             <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Feb 27, 2020) </a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1 et V4.2 (mise à jour mars février 2021) </a>
+                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1 et V4.2 (mise à jour mars 2021) </a>
             </div>
         </div>
 
